2004-03-03  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/music-glossary.tely (Top): change central C
	to middle C.

	* lily/text-item.cc (interpret_markup): cache make-simple-markup

2004-03-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/test/title-markup.ly (spaceTest): Add.

	* lily/text-item.cc (interpret_markup): Make line markup from
	multi word markup.

	* scm/define-markup-commands.scm (word): New markup command.
	(simple): Use it.

	* scm/output-ps.scm (define-fonts): Fix TeX font scaling.

2004-03-02  Heikki Junes <hjunes@cc.hut.fi>

	* vim/ftplugin/lilypond.vim:
	* vim/syntax/lilypond.vim: use only local settings with setlocal.
	show matching paren in insert mode.

2004-03-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-ps.scm (make-title, output-scopes): Further
	development.

	* input/test/title-markup.ly: New file.

	* ps/lilyponddefs.ps: Disable PostScript titling.

	* lily/paper-score.cc (process): Qoute PORT argument to make-title.

2004-03-01  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/arpeggio.cc (width_callback): remove padding.
 
	* scm/define-grobs.scm (all-grob-descriptions): add padding.

	* scm/define-music-types.scm: remove make-music-by-name.

	* Documentation/user/lilypond.tely: doc patch by Edward Sutton.

2004-03-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/paper-score.cc (process): Output titles using make-title.

	* scm/output-ps.scm (output-stencil): Display directly instead of
	constructing string.
	(make-title): New function.

2004-03-01  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/lilypond-book.itely (Integrating LaTeX and
	music), Documentation/user/invoking.itexi (Invoking lilypond): 
	Move documentation of LaTeX packages for latin1 characters to the
	lilypond-book manual.

2004-03-01  Heikki Junes <hjunes@cc.hut.fi>

	* Documentation/topdocs/INSTALL.texi: small fix (by Matthias Kilian).

	* vimrc: add menu in console and shortcut <F10> for it.

	* vim/:
	* vim/compiler/: