@@ -1,5 +1,8 @@
 2004-03-03  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* scm/define-markup-commands.scm (simple): robustification of
+	simple-markup.
+
 	* Documentation/user/music-glossary.tely (Top): change central C
 	to middle C.
 
